--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
         <div id="map"></div>
     </div>   
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCy3A3m63BBMJ6pD0aAhvnPo35d-8g6IFQ&v=3&callback=initMap"> </script>
     <script src="js/libs/knockout-3.4.2.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCy3A3m63BBMJ6pD0aAhvnPo35d-8g6IFQ&v=3&callback=ViewModel.initMap"> </script>
   </body>
 </html>
