added side panel to html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="css/style.css"> 
 </head>
   <body>
-    <div class="container">
+    <div class="container flex-box">
+        <div class="location-panel">
+            <h3>Durham Locations</h3>
+        </div>
         <div id="map"></div>
     </div>   
 
