--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="location-panel" >
             <h3>Durham Locations</h3>
             <form data-bind ="submit: viewModel.clickCategory">  
-                <select data-bind ="options: viewModel.filterList, value: viewModel.selectedCategory"></select>                
+                <select data-bind ="options: viewModel.filterListKey, value: viewModel.selectedCategory"></select>                
                 <button type="submit">Filter</button>
             </form>
             <ul data-bind ="foreach: viewModel.locationList()">
@@ -20,6 +20,7 @@
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCy3A3m63BBMJ6pD0aAhvnPo35d-8g6IFQ&v=3&callback=mapView.initMap"> </script>
     <script src="js/libs/knockout-3.4.2.js"></script>
+    <script src="js/libs/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
